# Interim-app-back

./: Dockerfile  README.md  clear_db.py  config.py  fix_seed_db.py  pyproject.toml  quick_seed.py  seed_db.py  wsgi.py
.github/workflows/: 1-code-format.yml  1-python-check.yml  2-code-format.yml  2-python-check.yml  3-test.yml  format-code.yml  python-checks.yml  test.yml
app/: __init__.py  swagger_config.py
app/models/: __init__.py  application.py  base.py  company.py  enums.py  exceptions.py  job.py  user.py
app/routes/: __init__.py  applications.py  auth.py  companies.py  jobs.py  users.py
app/schemas/: __init__.py  application_schema.py  base.py  company_schema.py  job_schema.py  user_schema.py
app/utils/: __init__.py  db.py  decorators.py  exceptions.py  helpers.py  response_helpers.py  route_helpers.py  security.py
tests/: conftest.py
tests/test_models/: test_application.py  test_company.py  test_job.py  test_user.py
tests/test_routes/: test_auth.py  test_companies.py  test_jobs.py  test_users.py
tests/test_utils/: test_db.py  test_security.py
