[tool.poetry]
name = "interim-app-backend"
version = "0.1.0"
description = "Backend for InterimApp - Job Search Platform"
authors = ["Aysan DEHGHAN <aysan.dehghan@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
flask-cors = "^4.0.0"
pymongo = "^4.5.0"
flask-pymongo = "^2.3.0"
python-dotenv = "^1.0.0"
marshmallow = "^3.20.1"
flask-jwt-extended = "^4.5.3"
passlib = "^1.7.4"
gunicorn = "^21.2.0"
pydantic = "^2.4.2"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mongomock = "^4.3.0"
pytest-cov = "^6.1.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"